--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 		<nav>
 			<ul id="menu">
 				<li><a href="#">Home</a></li>
+				<li><a href="#">about</a></li>
+				<li><a href="#">portfolio</a></li>
 				<li><a href="#">Contact</a></li>
 			</ul>
 		</nav>
